Css for the toolset editor now responds to percentages. Moved the mouse hover event over to each individual div. ClsHidden no longer sets visibility: hidden

--- a/WinterEngine.UI/Styling/Game/SharedStyles.css
+++ b/WinterEngine.UI/Styling/Game/SharedStyles.css
@@ -81,7 +81,6 @@ td
 
 .clsHidden
 {
-    visibility:hidden;
     display:none;
 }
 
